--- a/cv-Ruth-Bentov/src/App.scss
+++ b/cv-Ruth-Bentov/src/App.scss
@@ -1,47 +1,10 @@
 
 body, html{
   width: 100%;
-  background-color: rgba(131, 131, 131, 0.381);
+  // background-color: rgba(131, 131, 131, 0.381);
   *{
-    color: #4e4e4e;
+    // color: #4e4e4e;
   }
-}
-
-.profileImg{
-    width: 270px;
-    filter: grayscale(0.9) contrast(1.1) brightness(1.1);
-    border-radius: 80px 80px 0px 0px;
-}
-
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-}
-
-.navbar ul {
-  width: 100%; 
-
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-
-.navbar ul li {
-  display: inline;
-}
-
-.navbar ul li a {
-  display: block;
-  padding: 14px 16px;
-  text-decoration: none;
-  color: white;
-}
-
-.navbar ul li a:hover {
-  background-color: #ddd;
-  color: black;
 }
 
 
