--- a/cv-Ruth-Bentov/src/components/AboutMe/aboutMe.scss
+++ b/cv-Ruth-Bentov/src/components/AboutMe/aboutMe.scss
@@ -1,7 +1,104 @@
 @import "../../assets/style.scss";
 
-.aboutMeDiv{
-    width: 100vw;
-    height: 100vh;
-    background-color: $superDark;
+.aboutMeDiv {
+  width: 100vw;
+  height: 100vh;
+  background-color: #2c2e3d85;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .bgImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    filter: contrast(0.4) grayscale(0) brightness(0.3);
+    z-index: -1;
+  }
+
+  .techSkillHeader {
+    color: $whiteGray;
+    justify-content: center;
+    margin: 2rem;
+    font-size: 46px;
+    font-weight: 100;
+    display: flex;
+    align-items: center;
+    letter-spacing: 6px;
+    svg {
+      margin-left: 10px;
+      font-weight: 100;
+      color: $orange;
+    }
+  }
+  .lamp {
+    width: 80px;
+    display: inline-block;
+    background-color: white;
+  }
+  .skills {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .flipCard {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+    cursor: pointer;
+  }
+
+  .skillBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .flipCard:hover .skillBox {
+    transform: rotateY(180deg);
+  }
+
+  .skillHeader,
+  .skillVal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .skillHeader {
+    background-color: $whiteGray;
+    color: $orange;
+    font-size: 18px;
+    font-weight: bolder;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .skillVal {
+    background-color: $orange;
+    color: white;
+    display: flex;
+    // padding: 0px 300px;
+    // flex-direction: column;
+    justify-content: center;
+    justify-content: left;
+    transform: rotateY(180deg);
+    ul {
+      min-width: 180px;
+      margin-top: 35px;
+      list-style: none;
+      font-size: 20px;
+      line-height: 35px;
+    }
+  }
 }
